Ter-dijk toevoegen extra website beeld

--- a/portfolio-ter-dijck.html
+++ b/portfolio-ter-dijck.html
@@ -155,6 +155,7 @@
 				<img src="images/bb/ter-dijck-logo-alt.jpg" alt="" />
 				<img src="images/bb/Ter-Dijck-naamkaartjes.jpg" alt="" />
 				<img src="images/bb/Ter-Dijck-website-homepage.gif" alt="" />
+				<img src="images/bb/ter-dijck-website-receptiehapjes-home.jpg" alt="" />
 				<img src="images/bb/ter-dijck-website-receptiehapjes.jpg" alt="" />
 				<img src="images/bb/ter-dijck-website-andereformules-01.jpg" alt="" />
 				<img src="images/bb/ter-dijck-website-andereformules-02.jpg" alt="" />
