--- a/portfolio-worldline.html
+++ b/portfolio-worldline.html
@@ -158,7 +158,7 @@
 				<img src="images/bb/WL-Club-promomag_witte-piste_v5_SPREAD1.jpg" alt="" />
 				<img src="images/bb/WL-Club-promomag_witte-piste_v5_SPREAD2.jpg" alt="" />
 				<img src="images/bb/WL-Club-promomag_PRESA_1-1.jpg" alt="" />
-				<video style="width: 100%; height: auto;" src="images/bb/WL-6080_Visa-Fifa-WK2018_Desktop_landing_mockup 2.mp4" 	preload playsinline muted loop autoplay></video>
+				<!-- <video style="width: 100%; height: auto;" src="images/bb/WL-6080_Visa-Fifa-WK2018_Desktop_landing_mockup 2.mp4" 	preload playsinline muted loop autoplay></video> -->
 
 			</div><!-- // .desktop-9 -->
 
