Revision WL & Ter-Dijck

--- a/portfolio-worldline.html
+++ b/portfolio-worldline.html
@@ -24,7 +24,7 @@
 	Original LESS Stylesheet
 	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
 	================================================== -->
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
+	<link rel="stylesheet" type="text/css" href="https://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -38,7 +38,7 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
 
 	<!-- Favicons
 	================================================== -->
@@ -153,11 +153,15 @@
 
 				<img src="images/bb/WL-Neckhanger-waterfles_hanger.jpg" alt="" />
 				<img src="images/bb/WL-Neckhanger-waterfles_mockup-3D.jpg" alt="" />
+
 				<img src="images/bb/WL-Packs-folder-21x21cm-DM-Clients_Mockup-3Dv2.jpg" alt="" />
-				<img src="images/bb/WL-Club-promomag_witte-piste_v5_COVER-1.jpg" alt="" />
+
+				<img src="images/bb/WL_horecabeurs_DM.jpg" alt="" />
+
 				<img src="images/bb/WL-Club-promomag_witte-piste_v5_SPREAD1.jpg" alt="" />
-				<img src="images/bb/WL-Club-promomag_witte-piste_v5_SPREAD2.jpg" alt="" />
-				<img src="images/bb/WL-Club-promomag_PRESA_1-1.jpg" alt="" />
+
+				<img src="images/bb/WL_horecabeurs_paneel.jpg" alt="" />
+
 				<!-- <video style="width: 100%; height: auto;" src="images/bb/WL-6080_Visa-Fifa-WK2018_Desktop_landing_mockup 2.mp4" 	preload playsinline muted loop autoplay></video> -->
 
 			</div><!-- // .desktop-9 -->
