--- a/portfolio-ter-dijck.html
+++ b/portfolio-ter-dijck.html
@@ -24,7 +24,7 @@
 	Original LESS Stylesheet
 	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
 	================================================== -->
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
+	<link rel="stylesheet" type="text/css" href="https://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -38,7 +38,7 @@
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300' rel='stylesheet' type='text/css'>
 
 	<!-- Favicons
 	================================================== -->
@@ -154,11 +154,9 @@
 				<img src="images/bb/ter-dijck-logo1.png" alt="" />
 				<img src="images/bb/ter-dijck-logo-alt.jpg" alt="" />
 				<img src="images/bb/Ter-Dijck-naamkaartjes.jpg" alt="" />
-				<img src="images/bb/Ter-Dijck-website-homepage.gif" alt="" />
-				<img src="images/bb/ter-dijck-website-receptiehapjes-home.jpg" alt="" />
-				<img src="images/bb/ter-dijck-website-receptiehapjes.jpg" alt="" />
-				<img src="images/bb/ter-dijck-website-andereformules-01.jpg" alt="" />
-				<img src="images/bb/ter-dijck-website-andereformules-02.jpg" alt="" />
+				<video style="width: 100%; height: auto;" src="images/bb/Ter-Dijck-website-homepage.mp4" 	preload playsinline muted loop autoplay></video><br/>
+				<!-- <img src="images/bb/Ter-Dijck-website-homepage.gif" alt="" /> -->
+				<img src="images/bb/ter-dijck-website-screens.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
