--- a/portfolio-exxonmobil.html
+++ b/portfolio-exxonmobil.html
@@ -151,10 +151,10 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/bb/ter-dijck-logo1.png" alt="" />
-				<img src="images/bb/ter-dijck-logo-alt.jpg" alt="" />
-				<img src="images/bb/Ter-Dijck-naamkaartjes.jpg" alt="" />
-				<img src="images/bb/ter-dijck-website-screens.jpg" alt="" />
+				<img src="images/bb/EXXO_Packaging-1L-stand-up-pouchv18.jpg" alt="" />
+				<video style="width: 100%; height: auto;" src="images/bb/EXXO_Pouch 1L mockups.mp4" 	preload playsinline muted loop autoplay></video><br/>
+				<br/><br/><br/>
+				<img src="images/bb/EXXO_Expo-ETC-50j_foto1.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
