--- a/index.html
+++ b/index.html
@@ -150,6 +150,20 @@
 			</div><!-- // .item -->
 
 			<div class="item">
+				<a href="portfolio-exxonmobil.html" class="permalink">
+					<div class="remove-line-height">
+						<img src="images/bb/exxonmobil-preview.jpg" alt="" />
+					</div><!-- // .remove-line-height -->
+
+					<div class="box-desc">
+						<h3>ExxonMobil</h3>
+						<span class="category">packaging, expo &amp; motion graphics</span>
+					</div><!-- // .box-desc -->
+
+				</a>
+			</div><!-- // .item -->
+
+			<div class="item">
 				<a href="portfolio-2.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/Apollo-preview.jpg" alt="" />
