--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 				<div class="box-desc">
 					<h3>Worldline</h3>
-					<span class="category">DM</span>
+					<span class="category">Graphic design</span>
 				</div><!-- // .box-desc -->
 
 			</a>
@@ -129,7 +129,7 @@
 
 				<div class="box-desc">
 					<h3>Retail Detail</h3>
-					<span class="category">Brand &amp; magazine design</span>
+					<span class="category">Brand &amp; graphic design</span>
 				</div><!-- // .box-desc -->
 
 			</a>
@@ -157,7 +157,7 @@
 
 					<div class="box-desc">
 						<h3>ExxonMobil</h3>
-						<span class="category">packaging, expo &amp; motion graphics</span>
+						<span class="category">Packaging, expo &amp; motion graphic design</span>
 					</div><!-- // .box-desc -->
 
 				</a>
