--- a/portfolio-worldline.html
+++ b/portfolio-worldline.html
@@ -151,12 +151,12 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/bb/WL-Neckhanger-waterfles_hanger.jpg" alt="" />
+				<!-- <img src="images/bb/WL-Neckhanger-waterfles_hanger.jpg" alt="" /> -->
 				<img src="images/bb/WL-Neckhanger-waterfles_mockup-3D.jpg" alt="" />
 
 				<img src="images/bb/WL-Packs-folder-21x21cm-DM-Clients_Mockup-3Dv2.jpg" alt="" />
 
-				<img src="images/bb/WL_Horecabeurs_inpakpapier.jpg" alt="" />
+				<!-- <img src="images/bb/WL_Horecabeurs_inpakpapier.jpg" alt="" /> -->
 
 				<img src="images/bb/WL-Club-promomag_witte-piste_v5_SPREAD1.jpg" alt="" />
 
