--- a/portfolio-brandheroes.html
+++ b/portfolio-brandheroes.html
@@ -155,20 +155,20 @@
 				</div>
 
 				<div class="video-container">
-					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/jGmHieAwB6Q?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/jGmHieAwB6Q?rel=0&amp;vq=hd1080;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 				</div>
 
-				<div class="video-container">
+				<!-- <div class="video-container">
 					<iframe src="https://player.vimeo.com/video/105217095?portrait=0" width="720" height="405" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				</div>
+				</div> -->
 
-				<div class="video-container">
+				<!-- <div class="video-container">
 					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/me5pNym6S4A?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 				</div>
 
 				<div class="video-container">
 					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/OiIfbUPfk74?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				</div>
+				</div> -->
 
 
 			</div><!-- // .desktop-9 -->
