--- a/portfolio-exxonmobil.html
+++ b/portfolio-exxonmobil.html
@@ -151,11 +151,12 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/bb/EXXO_Packaging-1L-stand-up-pouchvDEF1.jpg" alt="" />
-				<img src="images/bb/EXXO_Packaging-1L-stand-up-pouchvDEF2.jpg" alt="" />
+				<img style="margin-bottom:0px;" src="images/bb/EXXO_Packaging-1L-stand-up-pouchvDEF1.jpg" alt="" />
+				<img style="margin-bottom:15px;"src="images/bb/EXXO_Packaging-1L-stand-up-pouchvDEF2.jpg" alt="" />
 
-				<img src="images/bb/EXXO_K2019_banner_636x192.jpg" alt="" />
-
+				<img style="margin-bottom:0px;" src="images/bb/EXXO_K2019_banner_636x192.jpg" alt="" />
+				<video style="width: 100%; height: auto;" src="images/bb/EXXO_K2019_2K_TV_behind bar_anim_855.mp4" 	preload playsinline muted loop autoplay></video><br/>
+				<br/><br/>
 				<img src="images/bb/EXXO_Expo-ETC-50j_atrium.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
