--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 				<div class="box-desc">
 					<h3>Retail Detail</h3>
-					<span class="category">Brand &amp; graphic design</span>
+					<span class="category">Brand &amp; Graphic design</span>
 				</div><!-- // .box-desc -->
 
 			</a>
@@ -157,7 +157,7 @@
 
 					<div class="box-desc">
 						<h3>ExxonMobil</h3>
-						<span class="category">Packaging, expo &amp; motion graphic design</span>
+						<span class="category">Package, Expo &amp; Motion graphic design</span>
 					</div><!-- // .box-desc -->
 
 				</a>
@@ -185,7 +185,7 @@
 
 					<div class="box-desc">
 						<h3>Eurogarden</h3>
-						<span class="category">Brand &amp; package design</span>
+						<span class="category">Brand &amp; Package design</span>
 					</div> <!-- // .box-desc -->
 
 				</a>
@@ -199,7 +199,7 @@
 
 					<div class="box-desc">
 						<h3>Aquaplan</h3>
-						<span class="category">Package &amp; brand design</span>
+						<span class="category">Package &amp; Brand design</span>
 					</div><!-- // .box-desc -->
 
 				</a>
@@ -354,7 +354,7 @@
 
 					<div class="box-desc">
 						<h3>Vaf | Flanders Image</h3>
-						<span class="category">Key-art design &amp; title treatment</span>
+						<span class="category">Key-art design &amp; Title treatment</span>
 					</div> <!--// .box-desc -->
 
 				</a>
@@ -368,7 +368,7 @@
 
 					<div class="box-desc">
 						<h3>Brand Heroes</h3>
-						<span class="category">Motion graphic design &amp; editing</span>
+						<span class="category">Motion graphic design &amp; Editing</span>
 					</div> <!--// .box-desc -->
 
 				</a>
