--- a/portfolio-exxonmobil.html
+++ b/portfolio-exxonmobil.html
@@ -118,7 +118,7 @@
 							<h3 class="border-top">ExxonMobil</h3>
 							<p class="project-desc">2019</p>
 
-							<p>Packaging, expo design and motion graphics.</p>
+							<p>Design and production-ready layouts with a focus on international trade fairs for a large international energy provider and chemical manufacturer.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -128,7 +128,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Category</h4>
 							<p>
-								Packaging &amp; expo design
+								Packaging, expo &amp; motion graphic design
 							</p>
 						</div><!-- // .box-info -->
 
