--- a/portfolio-worldline.html
+++ b/portfolio-worldline.html
@@ -118,7 +118,7 @@
 							<h3 class="border-top">Worldline</h3>
 							<p class="project-desc">2017</p>
 
-							<p>Direct mailings and more…</p>
+							<p>Design and production-ready layouts of DM's, online banners, trade show booths, brochures and more for a payment solutions company.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -128,7 +128,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Category</h4>
 							<p>
-								DM
+								Graphic design
 							</p>
 						</div><!-- // .box-info -->
 
