--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		</div><!-- // .item -->
 
 		<div class="item">
-			<a href="portfolio-4.html" class="permalink">
+			<a href="portfolio-retaildetail.html" class="permalink">
 				<div class="remove-line-height">
 					<img src="images/bb/RD-huisstijl-preview.jpg" alt="" />
 				</div><!-- // .remove-line-height -->
@@ -136,7 +136,7 @@
 		</div><!-- // .item -->
 
 			<div class="item">
-				<a href="portfolio-1.html" class="permalink">
+				<a href="portfolio-ahead-orthopedie.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/Ahead-preview-1.jpg" alt="" />
 					</div><!-- // .remove-line-height -->
@@ -164,7 +164,7 @@
 			</div><!-- // .item -->
 
 			<div class="item">
-				<a href="portfolio-2.html" class="permalink">
+				<a href="portfolio-apollo.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/Apollo-preview.jpg" alt="" />
 					</div><!-- // .remove-line-height -->
@@ -199,7 +199,7 @@
 
 					<div class="box-desc">
 						<h3>Aquaplan</h3>
-						<span class="category">Package &amp; Brand design</span>
+						<span class="category">Package design</span>
 					</div><!-- // .box-desc -->
 
 				</a>
@@ -207,7 +207,7 @@
 			</div>
 
 			<div class="item">
-				<a href="portfolio-6.html" class="permalink">
+				<a href="portfolio-brandheroes.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/BH-preview.jpg" alt="" />
 					</div><!-- // .remove-line-height -->
@@ -235,7 +235,7 @@
 			</div><!-- // .item -->
 
 			<div class="item">
-				<a href="portfolio-7.html" class="permalink">
+				<a href="portfolio-benda.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/Benda-preview.jpg" alt="" />
 					</div><!-- // .remove-line-height -->
@@ -263,14 +263,14 @@
 			</div> <!-- // .item -->
 
 			<div class="item">
-				<a href="portfolio-escenteau.html" class="permalink">
+				<a href="portfolio-3dviz.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/escenteau-preview.jpg" alt="" />
 					</div> <!-- // .remove-line-height -->
 
 					<div class="box-desc">
-						<h3>Escenteau</h3>
-						<span class="category">3D viz</span>
+						<h3>Miscellaneous</h3>
+						<span class="category">3D visualisation</span>
 					</div> <!--// .box-desc -->
 
 				</a>
@@ -319,18 +319,18 @@
 			</div> <!-- // .item -->
 
 			<div class="item">
-				<a href="portfolio-3.html" class="permalink">
+				<a href="portfolio-motion-graphics.html" class="permalink">
 					<div class="remove-line-height">
-						<img src="images/bb/loewe-preview.jpg" alt="" />
-					</div><!-- // .remove-line-height -->
+						<img src="images/bb/motiongraphics-preview.jpg" alt="" />
+					</div> <!-- // .remove-line-height -->
 
 					<div class="box-desc">
-						<h3>Loewe.</h3>
-						<span class="category">Ad campaign design</span>
-					</div><!-- // .box-desc -->
+						<h3>There | Brand Heroes</h3>
+						<span class="category">Motion graphic design &amp; Editing</span>
+					</div> <!--// .box-desc -->
 
 				</a>
-			</div><!-- // .item -->
+			</div> <!-- // .item -->
 
 			<div class="item">
 				<a href="portfolio-garage-sander.html" class="permalink">
@@ -341,6 +341,20 @@
 					<div class="box-desc">
 						<h3>Garage Sander</h3>
 						<span class="category">Brand &amp; Signage design</span>
+					</div><!-- // .box-desc -->
+
+				</a>
+			</div><!-- // .item -->
+
+			<div class="item">
+				<a href="portfolio-loewe.html" class="permalink">
+					<div class="remove-line-height">
+						<img src="images/bb/loewe-preview.jpg" alt="" />
+					</div><!-- // .remove-line-height -->
+
+					<div class="box-desc">
+						<h3>Loewe.</h3>
+						<span class="category">Ad campaign design</span>
 					</div><!-- // .box-desc -->
 
 				</a>
@@ -360,19 +374,19 @@
 				</a>
 			</div> <!-- // .item -->
 
-			<div class="item">
-				<a href="portfolio-brandheroes.html" class="permalink">
+			<!-- <div class="item">
+				<a href="portfolio-kramselfc.html" class="permalink">
 					<div class="remove-line-height">
-						<img src="images/bb/motiongraphics-preview.jpg" alt="" />
-					</div> <!-- // .remove-line-height -->
+						<img src="images/bb/krfc-preview.jpg" alt="" />
+					</div>
 
 					<div class="box-desc">
-						<h3>Brand Heroes</h3>
-						<span class="category">Motion graphic design &amp; Editing</span>
-					</div> <!--// .box-desc -->
+						<h3>K Ramsel FC</h3>
+						<span class="category">Logo &amp; Web design</span>
+					</div>
 
 				</a>
-			</div> <!-- // .item -->
+			</div>  -->
 
 			<!-- <div class="item">
 				<a href="portfolio-corsan.html" class="permalink">
@@ -389,7 +403,7 @@
 			</div>  -->
 
 			<!-- <div class="item">
-				<a href="portfolio-8.html" class="permalink">
+				<a href="portfolio-heidi-natuurlijk.html" class="permalink">
 					<div class="remove-line-height">
 						<img src="images/bb/Heidi-preview.jpg" alt="" />
 					</div>
