--- a/portfolio-aquaplan.html
+++ b/portfolio-aquaplan.html
@@ -128,7 +128,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Category</h4>
 							<p>
-								Package &amp; brand design
+								Package design
 							</p>
 						</div><!-- // .box-info -->
 
