--- a/portfolio-brandheroes.html
+++ b/portfolio-brandheroes.html
@@ -115,10 +115,10 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Motion graphics &amp; editing</h3>
-							<p class="project-desc">2014 and beyond…</p>
+							<h3 class="border-top">Brand Heroes</h3>
+							<p class="project-desc">2015</p>
 
-							<p>Motion graphic design and video editing for clients and inhouse promotions.</p>
+							<p>From web design prototyping to css styling, initial development in Drupal and adding content into CMS for in-house website.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -128,7 +128,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Category</h4>
 							<p>
-								Motion graphics &amp; editing
+								Web design
 							</p>
 						</div><!-- // .box-info -->
 
@@ -150,26 +150,10 @@
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="desktop-9 tablet-12 columns">
-				<div class="video-container">
-					<iframe src="https://player.vimeo.com/video/82279617?portrait=0" width="720" height="405" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				</div>
 
-				<div class="video-container">
-					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/jGmHieAwB6Q?rel=0&amp;vq=hd1080;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				</div>
-
-				<!-- <div class="video-container">
-					<iframe src="https://player.vimeo.com/video/105217095?portrait=0" width="720" height="405" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				</div> -->
-
-				<!-- <div class="video-container">
-					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/me5pNym6S4A?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				</div>
-
-				<div class="video-container">
-					<iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/OiIfbUPfk74?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-				</div> -->
-
+				<img src="images/bb/BrandHeroes2015-home.jpg" alt="" />
+				<!-- <div class="media-responsive"><iframe allowfullscreen="" frameborder="0" height="484px;" src="images/bb/BH-1minute-spot_HD720p.mp4" width="860px;"></iframe></div> -->
+				<img src="images/bb/BrandHeroes2015-portfolio.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
 
