--- a/portfolio-europremium.html
+++ b/portfolio-europremium.html
@@ -151,7 +151,7 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/bb/EP-Dogfood-pres1.png" alt="" />
+				<!-- <img src="images/bb/EP-Dogfood-pres1.png" alt="" /> -->
 				<img src="images/bb/EP-Dogfood-pres2.jpg" alt="" />
 				<img src="images/bb/EP-Dogfood-pres3.jpg" alt="" />
 				<img src="images/bb/EP-Dogfood-pres3bis.jpg" alt="" />
