--- a/portfolio-gardiman.html
+++ b/portfolio-gardiman.html
@@ -118,7 +118,7 @@
 							<h3 class="border-top">Alliant | Gardipart | Gardiman</h3>
 							<p class="project-desc">2016</p>
 
-							<p>Brand design of sub-brand for gardening equipment client.</p>
+							<p>Brand design of sub-brand for gardening equipment company.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -128,7 +128,7 @@
 						<div class="box-info">
 							<h4 class="border-top">Category</h4>
 							<p>
-								Brand design &amp; Package + realisation
+								Brand &amp; Package design
 							</p>
 						</div><!-- // .box-info -->
 
