--- a/about.html
+++ b/about.html
@@ -149,14 +149,17 @@
 
 						<div class="push-3 desktop-6 tablet-6 columns">
 							<h4>Beroepservaring</h4>
-							<p><strong>20.12.2016 tot heden:</strong> there advertising & communication, Hervelee (Leuven): <br>
+							<p><strong>11.01.2021 tot heden:</strong> Wils & Peeters graphic design, Lier: <br>
+								<strong>Senior Graphic Designer</strong><br>
+								Bedenken van campagnes voor o.a. belangen­organisaties tot het volledig uitwerken naar off- en online dragers (o.a. advertenties, beurs-, social media en website materialen).</p>
+							<p><strong>20.12.2016 tot 10.01.2021:</strong> there advertising & communication, Hervelee (Leuven): <br>
 								<strong>Senior Graphic Designer</strong><br>
 								Vormgeven van DM’s, advertenties, brochures, POS materiaal, verpakkingen e.d. voor klanten uit verschillende sectoren. Als ook uitwerken van Social Media visuals en animaties.</p>
 							<p><strong>01.11.2013 tot 29.09.2016:</strong> Brand Heroes, Antwerpen: <br>
-								<strong>Graphic Designer</strong><br>
+								<strong>Senior Graphic Designer</strong><br>
 								Ontwerpen van branding voor gevestigde merken en start-ups in al zijn facetten. Ontwerpen, uitwerken en opvolgen van digitale communicatie: presentaties, emailings, websites, storytelling via animatie, infografiek.</p>
 							<p><strong>01.12.2008 tot 29.09.2016:</strong> Mia studio, Antwerpen: <br>
-								<strong>Graphic Designer</strong><br>
+								<strong>Senior Graphic Designer</strong><br>
 								Ontwerpen van keyart en verpakkingen voor film en entertainment. Het ontwerpen van logo’s en huisstijlen, below the line communicatie voor grote spelers uit de food sector. Vormgeven en creëren van magazines, boekcovers en binnenwerk tot drukklare bestanden. Verantwoordelijk voor opvolging en coördinatie (workload &amp; design) van een creatief team alsook technische ondersteuning.</p>
 							<p><strong>01.03.1998 tot 01.12.2008:</strong> Graph-X, Antwerpen: <br>
 								<strong>Graphic Designer</strong><br>
@@ -194,8 +197,8 @@
 								PTI St-Godelieve, Antwerpen <br>
 								<strong>Computerkennis</strong> <br>
 								<u>Grondige kennis:</u> Adobe CC: InDesign, Photoshop, Illustrator, Acrobat <br>
-								<u>Goede kennis:</u> Adobe After Effects, Adobe XD, Blender 3d, BoxShot4 <br>
-								<u>Basis kennis:</u> HTML5, CSS3, Bootstrap, Drupal, WordPress, Github, Prezly, Mailchimp, SurveyMonkey, Prezi, PanoTourPro</p>
+								<u>Goede kennis:</u> Adobe After Effects, Adobe XD, Adobe Animate, Blender 3d <br>
+								<u>Basis kennis:</u> HTML, CSS, Bootstrap, WordPress, Drupal, Github, Mailchimp</p>
 						</div><!-- // .desktop-6 -->
 
 						<div class="clear"></div>
