--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
 			<div class="clear"></div>
 
 			<div class="desktop-3 tablet-12 columns">
-				<h2>Kerncompetenties</h2>
+				<h2>Kerncompetenties</h2>
 			</div>
 			<div class="desktop-9 tablet-12 columns">
 				<p class="page-desc">Ik ben een <strong>down-to-earth</strong> persoon en lever graag <strong>creatief, kwalitatief en efficiënt</strong> werk af. Ik ben een doorzetter en ga daarvoor graag <strong>the extra mile.</strong> Ik werk zeer gefocust en met zin voor verantwoordelijkheid. <strong>Computers en softwarepakketten</strong> van o.a. Adobe CC heb ik, dankzij mijn ervaring en enorme interesse, <strong>stevig in de vingers.</strong> Het liefst werk ik met een korte communicatielijn tussen klanten en collega’s. Ik ervaar dit als een leerrijke <strong>samenwerking</strong> en apprecieer het als ik feedback krijg. Ik put enorme voldoening uit <strong>technische uitdagingen</strong> die het team en de job kunnen verder helpen.</p>
