--- a/portfolio-3dviz.html
+++ b/portfolio-3dviz.html
@@ -155,7 +155,7 @@
 				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-3x-plastic-BG.jpg" alt="" /> -->
 				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-gold-rose-silver.jpg" alt="" />-->
 				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-hipster-electric.jpg" alt="" /> -->
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-Wood.jpg" alt="" /> --> -->
+				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-Wood.jpg" alt="" /> -->
 
 				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-8.jpg" alt="" /> -->
 				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-9.jpg" alt="" /> -->
