--- a/portfolio-worldline.html
+++ b/portfolio-worldline.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+œ<!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
@@ -151,16 +151,21 @@
 
 			<div class="desktop-9 tablet-12 columns">
 
-				<img src="images/bb/WL-Packs-folder-21x21cm-DM-Clients_Mockup-3Dv2.jpg" alt="" />
+				<img src="images/bb/WL-Neckhanger-waterfles_hanger.jpg" alt="" />
 
 				<img src="images/bb/WL-Neckhanger-waterfles_mockup-3D.jpg" alt="" />
 
 				<video style="margin-bottom:60px; width: 100%; height: auto;" src="images/bb/WL_Mini Pack_FB profile visual.mp4" 	preload playsinline muted loop autoplay></video><br/>
 
+				<img src="images/bb/WL-Club-promomag_PRESA_1-1.jpg" alt="" />
+
 				<img src="images/bb/WL-Club-promomag_witte-piste_v5_SPREAD1.jpg" alt="" />
+
+				<img src="images/bb/WL-Packs-folder-21x21cm-DM-Clients_Mockup-3Dv2.jpg" alt="" />
 
 				<img src="images/bb/WL_horecabeurs_paneel.jpg" alt="" />
 
+				<video style="width: 100%; height: auto;" src="images/bb/WL-6080_Visa-Fifa-WK2018_Desktop_landing_mockup 2.mp4" 	preload playsinline muted loop autoplay></video>
 
 			</div><!-- // .desktop-9 -->
 
