--- a/portfolio-3dviz.html
+++ b/portfolio-3dviz.html
@@ -118,7 +118,7 @@
 							<h3 class="border-top">3D viz</h3>
 							<p class="project-desc">2016</p>
 
-							<p>From 3D visualisation product concept of perfume dispenser to presentation investers.</p>
+							<p>3D visuals for presentation of concepts or as key visual.</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -152,15 +152,6 @@
 			<div class="desktop-9 tablet-12 columns">
 
 				<img style="margin-bottom:15px;" src="images/bb/Escenteau-blueprint-combo.jpg" alt="" />
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-3x-plastic-BG.jpg" alt="" /> -->
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-gold-rose-silver.jpg" alt="" />-->
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-hipster-electric.jpg" alt="" /> -->
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-Wood.jpg" alt="" /> -->
-
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-8.jpg" alt="" /> -->
-				<!-- <img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-9.jpg" alt="" /> -->
-				<img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-10.jpg" alt="" />
-				<img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-11.jpg" alt="" />
 				<img style="margin-bottom:15px;" src="images/bb/Escenteau-PRES-V5-12.jpg" alt="" />
 
 			</div><!-- // .desktop-9 -->
